--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="topo" >
     <img class="logo" src="logo.png" alt="">
-    <h1>Agrinho</h1>
+    <h1 class="texo" >Agrinho</h1>
     </div>
 
 
