--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="topo" >
     <img class="logo" src="logo.png" alt="">
     <h1 class="texo" >Agrinho</h1>
-    <h1 class="texto" >Cep</h1>
+    <a href="https://www.cep.pr.gov.br/"><h1 class="texto" >Cep</h1></a>
     </div>
 
 
