--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href="https://www.cep.pr.gov.br/"><h1 class="texto" >Cep</h1></a>
     </div>
 
-    <div>
+    <div class="título" >
         <h1>Conexões entre as areas rurais e urbanas</h1>
     </div>
 
