--- a/index.html
+++ b/index.html
@@ -17,6 +17,10 @@
     <div class="título" >
         <h1>Conexões entre as areas rurais e urbanas</h1>
     </div>
+<div class="mato">
+    <img class="ma" src="image 1.png" alt="">
+    <h3 class="color" ><p>As conexões entre áreas rurais e urbanas são fundamentais para entender a dinâmica socioeconômica de uma região. E estão interligadas em varias coisas.</p></h3>
+</div>
 
 </body>
 </html>
