--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <img class="ma" src="image 1.png" alt="">
     <h2 class="color" ><p>As conexões entre áreas rurais e urbanas são fundamentais para entender a dinâmica socioeconômica de uma região. E estão interligadas em varias coisas.</p></h2>
 </div>
+<div class="mato">
+    <h2 class="color" ><p>As conexões entre áreas rurais e urbanas são fundamentais para entender a dinâmica socioeconômica de uma região. E estão interligadas em varias coisas.</p></h2>
+    <img class="ma" src="image 2.png" alt="">
+</div>
 
 </body>
 </html>
