--- a/index.html
+++ b/index.html
@@ -26,6 +26,10 @@
     <h2 class="color" ><p>Muitas pessoas migram das áreas rurais para as urbanas em busca de emprego, melhores oportunidades educacionais e acesso a serviços. Isso cria um fluxo constante de pessoas entre os dois ambientes.</p></h2>
     <img class="ma" src="image 2.png" alt="">
 </div>
-
+<div class="título2"><h1>Abastecimento de alimentos</h1></div>
+<div class="mato">
+    <img class="ma" src="image 3.png" alt="">
+    <h2 class="color" ><p>As áreas urbanas dependem das áreas rurais para fornecer alimentos e produtos agrícolas. A produção agrícola nas áreas rurais abastece os mercados urbanos, garantindo a segurança alimentar e o abastecimento constante de alimentos frescos.</p></h2>
+</div>
 </body>
 </html>
