--- a/index.html
+++ b/index.html
@@ -21,22 +21,22 @@
     <img class="ma" src="image 1.png" alt="">
     <h2 class="color" ><p>As conexões entre áreas rurais e urbanas são fundamentais para entender a dinâmica socioeconômica de uma região. E estão interligadas em varias coisas.</p></h2>
 </div>
-<div class="título2"><h1>Migração de trabalhadores</h1></div>
+<div class="título2"><h1>Migração de Trabalhadores</h1></div>
 <div class="mato2">
     <h2 class="color" ><p>Muitas pessoas migram das áreas rurais para as urbanas em busca de emprego, melhores oportunidades educacionais e acesso a serviços. Isso cria um fluxo constante de pessoas entre os dois ambientes.</p></h2>
     <img class="ma" src="image 2.png" alt="">
 </div>
-<div class="título3"><h1>Abastecimento de alimentos</h1></div>
+<div class="título3"><h1>Abastecimento de Alimentos</h1></div>
 <div class="mato3">
     <img class="ma" src="image 3.png" alt="">
     <h2 class="color" ><p>As áreas urbanas dependem das áreas rurais para fornecer alimentos e produtos agrícolas. A produção agrícola nas áreas rurais abastece os mercados urbanos, garantindo a segurança alimentar e o abastecimento constante de alimentos frescos.</p></h2>
 </div>
-<div class="título4"><h1>Transferência de recursos</h1></div>
+<div class="título4"><h1>Transferência de Recursos</h1></div>
 <div class="mato4">
     <h2 class="color" ><p>As áreas urbanas frequentemente fornecem capital, tecnologia e infraestrutura para as áreas rurais, enquanto as áreas rurais fornecem recursos naturais, como água, alimentos e matérias-primas, para as áreas urbanas.</p></h2>
     <img class="ma" src="image 4.png" alt="">
 </div>
-<div class="título5"><h1>Integração econômica</h1></div>
+<div class="título5"><h1>Integração Econômica</h1></div>
 <div class="mato5">
     <img class="ma" src="image 5.png" alt="">
     <h2 class="color" ><p>Muitas vezes, as economias rurais e urbanas estão interligadas por meio de cadeias de suprimentos e comércio. Por exemplo, produtos agrícolas das áreas rurais são processados e vendidos em áreas urbanas, gerando empregos e renda em ambas as áreas.</p></h2>
