--- a/index.html
+++ b/index.html
@@ -51,6 +51,20 @@
     <img class="ma" src="image 7.png" alt="">
     <h2 class="color" ><p>As áreas urbanas muitas vezes servem como centros de educação e inovação, enquanto as áreas rurais têm conhecimento e experiência em práticas agrícolas e de conservação. Existe uma troca contínua de conhecimento e tecnologia entre as duas áreas.</p></h2>
 </div>
+<h1 class="resu" >RESUMO</h1>
+<p class="resu2">é comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p>
 
+
+
+
+
+
+
+
+<div class="título8"><h1>Espaço Rural </h1></div>
+<div class="mato8">
+    <h2 class="color" ><p>Espaço rural é geralmente definido como o espaço não urbanizado que não  apresenta a formação de cidades e nem as suas práticas em um sentido  mais denso e que não é urbanizável a curto e médio prazo. Assim, o  meio rural costuma agregar as atividades agrárias, além de atividades  econômicas que envolvem o extrativismo, a conservação ambiental</p></h2>
+    <img class="ma" src="image 8.png" alt="">
+</div>
 </body>
 </html>
