--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <h2 class="color" ><p>As áreas urbanas muitas vezes servem como centros de educação e inovação, enquanto as áreas rurais têm conhecimento e experiência em práticas agrícolas e de conservação. Existe uma troca contínua de conhecimento e tecnologia entre as duas áreas.</p></h2>
 </div>
 <h1 class="resu" >RESUMO</h1>
-<p class="resu2">é comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p>
+<h2><p class="resu2">é comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p></h2>
 
 
 
