--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
 </div>
 <div>
 <h1 class="resu" >RESUMO</h1>
+<h2 class="color" ><p>é comum o equívoco de pensar essas regiões de forma separada, como  excludentes entre si. Na verdade, o que existe é uma relação de  complementaridade e até de dependência de um espaço para com o outro, de  modo que suas relações geográficas e econômicas são, ao mesmo tempo,  complexas e integradoras.</p></h2>
 </div>
 
 
@@ -63,7 +64,6 @@
 
 <div class="título8"><h1>Espaço Rural </h1></div>
 <div class="mato8">
-    <h2 class="color" ><p>Espaço rural é geralmente definido como o espaço não urbanizado que não  apresenta a formação de cidades e nem as suas práticas em um sentido  mais denso e que não é urbanizável a curto e médio prazo. Assim, o  meio rural costuma agregar as atividades agrárias, além de atividades  econômicas que envolvem o extrativismo, a conservação ambiental</p></h2>
     <img class="ma" src="image 8.png" alt="">
 </div>
 </body>
