--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 <div>
 <h1 class="resu" >RESUMO</h1>
-<h2 class="resu2" ><p>É comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de  complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p></h2>
+<h2 class="color" ><p>é comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de  complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p></h2>
 </div>
 
 
