--- a/index.html
+++ b/index.html
@@ -53,6 +53,9 @@
 </div>
 <div class="color"><h2>Essas conexões são essenciais para promover o desenvolvimento sustentável e o equilíbrio entre as áreas rurais e urbanas, garantindo que ambas prosperem e se beneficiem mutuamente.</h2></div>
 <div>
+<div class="color"><h1>Espaço rural e espaço urbano</h1></div>
+
+
 <h1 class="resu" >RESUMO</h1>
 <h2 class="color" ><p>É comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de  complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p></h2>
 </div>
