--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </div>
 <div class="color"><h2>Essas conexões são essenciais para promover o desenvolvimento sustentável e o equilíbrio entre as áreas rurais e urbanas, garantindo que ambas prosperem e se beneficiem mutuamente.</h2></div>
 <div>
-<div class="color"><h1>Espaço rural e espaço urbano</h1></div>
+<div class="título"><h1>Espaço rural e espaço urbano</h1></div>
 
 
 <h1 class="resu" >RESUMO</h1>
