--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 <div class="título8"><h1>Espaço Rural </h1></div>
 <div class="mato8">
     <img class="ma" src="image 8.png" alt="">
+    <h2 class="color" ><p>Muitas vezes, as economias rurais e urbanas estão interligadas por meio de cadeias de suprimentos e comércio. Por exemplo, produtos agrícolas das áreas rurais são processados e vendidos em áreas urbanas, gerando empregos e renda em ambas as áreas.</p></h2>
 </div>
 
 
