--- a/index.html
+++ b/index.html
@@ -59,7 +59,11 @@
     <img class="ma" src="image 8.png" alt="">
     <h2 class="color" ><p>Espaço rural é geralmente definido como o espaço não urbanizado que não  apresenta a formação de cidades e nem as suas práticas em um sentido  mais denso e que não é urbanizável a curto e médio prazo. Assim, o  meio rural costuma agregar as atividades agrárias, além de atividades  econômicas que envolvem o extrativismo, a conservação ambiental</p></h2>
 </div>
-
+<div class="título9"><h1>Transferir o Conhecimento</h1></div>
+<div class="mato9">
+    <img class="ma" src="image 9.png" alt="">
+    <h2 class="color" ><p></p></h2>
+</div>
 
 <h1 class="resu" >RESUMO</h1>
 <h2 class="color" ><p>É comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de  complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p></h2>
