--- a/index.html
+++ b/index.html
@@ -68,6 +68,15 @@
 <h1 class="resu" >RESUMO</h1>
 <h2 class="color" ><p>É comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de  complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p></h2>
 </div>
+<div class="sumário">
+<img src="Rectangle 24.png" alt="">
+<p class="t">explicação sobre conexoes</p>
+<p class="t">onde elas estão inteligadas</p>
+<p class="t">porque elas sao enssenciais </p>
+<p class="t">explicação e diferença entre espaço rural e urbano</p>
+<p class="t">resumo falando sobre elas serem interligadas</p>
+
+</div>
 
 
 
