--- a/index.html
+++ b/index.html
@@ -70,11 +70,11 @@
 </div>
 <div class="sumário">
 <img src="Rectangle 24.png" alt="">
-<p class="t">explicação sobre conexoes</p>
-<p class="t">onde elas estão inteligadas</p>
-<p class="t">porque elas sao enssenciais </p>
-<p class="t">explicação e diferença entre espaço rural e urbano</p>
-<p class="t">resumo falando sobre elas serem interligadas</p>
+<p class="t">explicação sobre conexoes
+    onde elas estão inteligadas
+    porque elas sao enssenciais 
+    explicação e diferença entre espaço rural e urbano
+    resumo falando sobre elas serem interligadas</p>
 
 </div>
 
