--- a/index.html
+++ b/index.html
@@ -70,11 +70,12 @@
 </div>
 <div class="sumário">
 <img src="Rectangle 24.png" alt="">
-<p class="t">explicação sobre conexoes
-    onde elas estão inteligadas
-    porque elas sao enssenciais 
-    explicação e diferença entre espaço rural e urbano
-    resumo falando sobre elas serem interligadas</p>
+<h1>Sumário</h1>
+<p class="t">Explicação sobre conexões
+    Onde elas estão inteligadas
+    Porque elas sao enssenciais 
+    Explicação e diferença entre espaço rural e urbano
+    Resumo falando sobre elas serem interligadas</p>
 
 </div>
 
