--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 </div>
 <div class="sumário">
 <img src="Rectangle 24.png" alt="">
-<h1 class="t">Sumário</h1>
+<h1 class="e">Sumário</h1>
 <p class="t">Explicação sobre conexões
     Onde elas estão inteligadas
     Porque elas sao enssenciais 
