--- a/index.html
+++ b/index.html
@@ -71,11 +71,11 @@
 <div class="sumário">
 <img src="Rectangle 24.png" alt="">
 <h1 class="e">Sumário</h1>
-<p class="t">Explicação sobre conexões
-    Onde elas estão inteligadas
-    Porque elas sao enssenciais 
-    Explicação e diferença entre espaço rural e urbano
-    Resumo falando sobre elas serem interligadas</p>
+<p class="t1">Explicação sobre conexões</p>
+<p class="t2">Explicação sobre conexões</p>
+<p class="t3">Explicação sobre conexões</p>
+<p class="t4">Explicação sobre conexões</p>
+<p class="t5">Explicação sobre conexões</p>
 
 </div>
 
