--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
 <img src="Rectangle 24.png" alt="">
 <h1 class="e">Sumário</h1>
 <p class="t1">Explicação sobre conexões</p>
-<p class="t2">Explicação sobre conexões</p>
-<p class="t3">Explicação sobre conexões</p>
-<p class="t4">Explicação sobre conexões</p>
-<p class="t5">Explicação sobre conexões</p>
+<p class="t2">Onde elas estão inteligadas</p>
+<p class="t3">Porque elas sao essenciais </p>
+<p class="t4">Explicação e diferença entre espaço rural e urbano</p>
+<p class="t5">Resumo falando sobre elas serem interligadas</p>
 
 </div>
 
