--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <h2 class="color" ><p>É comum o equívoco de pensar essas regiões de forma separada, como excludentes entre si. Na verdade, o que existe é uma relação de  complementaridade e até de dependência de um espaço para com o outro, de modo que suas relações geográficas e econômicas são, ao mesmo tempo, complexas e integradoras.</p></h2>
 </div>
 <div class="sumário">
-<img src="Rectangle 24.png" alt="">
+<img class="ret" src="Rectangle 24.png" alt="">
 <h1 class="e">Sumário</h1>
 <p class="t1">Explicação sobre conexões</p>
 <p class="t2">Onde elas estão inteligadas</p>
