--- a/index.html
+++ b/index.html
@@ -78,7 +78,8 @@
 <p class="t5">Resumo falando sobre elas serem interligadas</p>
 
 </div>
-
+<div class="fim" >
+    <img class="logofim" src="logo.png" alt="">
 
 
 
